@startuml
left to right direction
skin rose
set separator none
!pragma useIntermediatePackages false
package services{
    interface Emparejamiento<<Interface>> {
    }

    class EmparejamientoImpl {
    +cagarUsuariosDesdeArchivo(nombre: String): void
    +guardarUsuariosEnArchivo(nombreArchivo: String): void
    +buscarUsuarioPorNombre(nombre: String): Usuario
    +mostrarMenuPrincipal(): void
    +iniciarSesion(): void
    +ajustesDeUsuario(): void
    +MostrarUsuariosDisponibles(): String
    +MostrarUsuarioPorEdad(): String
    +SolicitudesDeEmparejamiento()
    +mostrarSolicitudesEnviadas(): void
    +mostrarSolicitudesRecibidas(): void
    +realizarSolicitudesEmparejamiento(): void
    -aceptarSolicitudEmparejamiento(): void
    -rechazarSolicitudEmparejamiento(): void
    -cancelarEmparejamiento(): void
    }
}
package model{
    class ArrayList<Usuario>{
        -..
        +ArrayList<Usuario>()
    }
    class Usuario{
        -nombre: String
        -contraseña: String
        -edad: int
        -estado: String
        +Usuario(nombre: String, contraseña: String, edad: int, estado: String)
        +getNombre(): String
        +getContraseña(): String
        +getEdad(): int
        +getEstado(): String
    }

}
ArrayList o--> Usuario: -listaUsuario: ListaUsuario[]
Emparejamiento <|.. EmparejamientoImpl
EmparejamientoImpl *--> ArrayList: -listaUsuario: ListaUsuario

@enduml